<resources>
    <string name="app_name">Trinity</string>
    <string name="biblioteca">Biblioteca</string>
    <string name="updates">Atualizações</string>
    <string name="extensoes">Extensões</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ir_para_o_pr_ximo_cap">Ir para o próximo capítulo</string>
    <string name="fim_do_cap">Fim do capítulo</string>
    <string name="cap_anterior">Capítulo anterior</string>
    <string name="da_direita_para_esquerda">Da direita para esquerda</string>
    <string name="em_cascata">Webtoon</string>
    <string name="da_esquerda_para_direita">Da esquerda para direita</string>
    <string name="hist_rico">Histórico</string>
    <string name="configura_es">Configurações</string>

</resources>