<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_shape"
    android:padding="15dp">
    <RadioGroup
        android:id="@+id/radio"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"


        >
        <RadioButton
            android:id="@+id/leftToRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/da_direita_para_esquerda"
            android:textColor="?attr/colorTertiary"
            android:textSize="15sp"
            android:fontFamily="@font/roboto_black" />
        <RadioButton
            android:id="@+id/rightToLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/da_esquerda_para_direita"
            android:textColor="?attr/colorTertiary"
            android:textSize="15sp"
            android:fontFamily="@font/roboto_black"/>
        <RadioButton
            android:id="@+id/cascade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/em_cascata"
            android:textColor="?attr/colorTertiary"
            android:textSize="15sp"
            android:fontFamily="@font/roboto_black"/>
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>