<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SettingsFragment"
    android:background="?attr/colorSurface">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/headerSettings"

        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="Configurações"
            android:textSize="17sp"
            android:textColor="?attr/colorTertiary"
            android:fontFamily="@font/roboto_black"
            android:layout_marginStart="5dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="?attr/colorTertiary"
        android:text="Leitor"
        android:fontFamily="@font/roboto_black"
        app:layout_constraintTop_toBottomOf="@id/headerSettings"
        app:layout_constraintStart_toStartOf="@+id/container1"
        
        android:layout_marginTop="10dp"

        />
    <LinearLayout
        android:id="@+id/container1"
        android:layout_width="350dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/readOrientation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <ImageView
                android:id="@+id/image1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/end_read"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Orientação de leitura"
                app:layout_constraintStart_toEndOf="@id/image1"
                android:textColor="?attr/colorTertiary"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="5dp"/>
            <ImageView
                android:id="@+id/drop1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/drop"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <RadioGroup
            android:id="@+id/radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"

            >
            <RadioButton
                android:id="@+id/leftToRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/da_esquerda_para_direita"
                android:textColor="?attr/colorTertiary"
                android:textSize="15sp"
                android:fontFamily="@font/roboto_black" />
            <RadioButton
                android:id="@+id/rightToLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/da_direita_para_esquerda"
                android:textColor="?attr/colorTertiary"
                android:textSize="15sp"
                android:fontFamily="@font/roboto_black"/>
            <RadioButton
                android:id="@+id/cascade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/em_cascata"
                android:textColor="?attr/colorTertiary"
                android:textSize="15sp"
                android:fontFamily="@font/roboto_black"/>
        </RadioGroup>
    </LinearLayout>
    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="?attr/colorTertiary"
        android:text="Conteúdo"
        android:fontFamily="@font/roboto_black"
        app:layout_constraintTop_toBottomOf="@id/container1"
        app:layout_constraintStart_toStartOf="@+id/container1"
        android:visibility="gone"
        android:layout_marginTop="10dp"

        />
    <LinearLayout
        android:id="@+id/container3"
        android:layout_width="350dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title2"
        android:orientation="horizontal"
        android:visibility="gone">
<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:id="@+id/imageQuality"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="10dp">-->
<!--            <ImageView-->
<!--                android:id="@+id/image3"-->
<!--                android:layout_width="30dp"-->
<!--                android:layout_height="30dp"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                android:src="@drawable/image_quality"-->
<!--                app:tint="?attr/colorPrimary"/>-->
<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Definir qualidade das páginas"-->
<!--                app:layout_constraintStart_toEndOf="@id/image3"-->
<!--                android:textColor="?attr/colorTertiary"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                android:layout_marginStart="5dp"/>-->
<!--            <ImageView-->
<!--                android:id="@+id/drop2"-->
<!--                android:layout_width="30dp"-->
<!--                android:layout_height="30dp"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                android:src="@drawable/drop"/>-->
<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
<!--        <RadioGroup-->
<!--            android:id="@+id/radio2"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            >-->
<!--            <RadioButton-->
<!--                android:id="@+id/high"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Alta"-->
<!--                android:textColor="?attr/colorTertiary"-->
<!--                android:textSize="15sp"-->
<!--                android:fontFamily="@font/roboto_black" />-->
<!--            <RadioButton-->
<!--                android:id="@+id/low"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Baixa"-->
<!--                android:textColor="?attr/colorTertiary"-->
<!--                android:textSize="15sp"-->
<!--                android:fontFamily="@font/roboto_black"/>-->
<!--        </RadioGroup>-->

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/alwaysCascate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_black"
            app:thumbTint="@color/thumb_color_state"
            />
        <TextView
            android:text="Sempre usar modo cascata em manhwas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorTertiary"
            android:fontFamily="@font/roboto_black"
            android:layout_marginStart="5dp"
            android:gravity="center_vertical"/>

    </LinearLayout>
    <TextView
        android:id="@+id/title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="?attr/colorTertiary"
        android:text="Download de capítulos"
        android:fontFamily="@font/roboto_black"
        app:layout_constraintTop_toBottomOf="@id/container3"
        app:layout_constraintStart_toStartOf="@+id/container1"
        android:layout_marginTop="10dp"

        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/deleteChapters"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title3"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <ImageView
            android:id="@+id/image2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/delete"
            app:tint="?attr/colorPrimary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Excluir todos os capítulos baixados"
            app:layout_constraintStart_toEndOf="@id/image2"
            android:textColor="?attr/colorTertiary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="5dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/confirmDelete"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/download_icon_shape"
        android:padding="10dp"
        android:visibility="gone">
        <TextView
            android:id="@+id/textConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="Tem certeza que quer apagar todos os capítulos salvos?"
            android:textColor="?attr/colorTertiary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sim"
            android:textSize="12sp"
            android:background="@drawable/download_icon_shape"
            app:layout_constraintTop_toBottomOf="@id/textConfirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="?attr/colorTertiary"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/FullRed"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Não"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/textConfirm"
            android:background="@drawable/download_icon_shape"
            android:textColor="?attr/colorTertiary"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="?attr/colorPrimary"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/title4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="?attr/colorTertiary"
        android:text="Aparência"
        android:fontFamily="@font/roboto_black"
        app:layout_constraintTop_toBottomOf="@id/deleteChapters"
        app:layout_constraintStart_toStartOf="@+id/container1"
        android:layout_marginTop="10dp"

        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/changeTheme"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title4"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <ImageView
            android:id="@+id/image4"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/palette_24dp_e8eaed_fill0_wght400_grad0_opsz24"
            app:tint="?attr/colorPrimary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Alterar tema"
            app:layout_constraintStart_toEndOf="@id/image4"
            android:textColor="?attr/colorTertiary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="5dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>